[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/Font/TitleFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/UiTheme.tres" type="Theme" id=2]
[ext_resource path="res://UserInterface/MainMenu.gd" type="Script" id=3]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
next_scene_path = "res://Stages/StageTutorial.tscn"

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.33276
margin_top = -1.16632
margin_right = -2.33276
margin_bottom = -1.16632
color = Color( 0.113725, 0.207843, 0.341176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleSwitch" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -84.0
margin_top = 92.1417
margin_right = 84.0
margin_bottom = 153.142
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.270588, 0.482353, 0.615686, 1 )
text = "SWITCH"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleSides" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -64.0
margin_top = 169.121
margin_right = 64.0
margin_bottom = 230.121
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.658824, 0.854902, 0.862745, 1 )
text = "SIDES"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -89.5
margin_top = -37.8431
margin_right = 89.5
margin_bottom = 110.157
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="VBoxContainer"]
margin_right = 179.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "PLAY"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 76.0
margin_right = 179.0
margin_bottom = 148.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "EXIT"
[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
